--- a/styles/style.css
+++ b/styles/style.css
@@ -95,9 +95,9 @@
 }
 
 .two-columns__brief {
-  margin-top: 0;
+  margin: 0;
   width: 175px;
-  color:#2f80ed;
+  color: #2f80ed;
   line-height: 1.2;
   font-size: 18px;
   font-weight: 400;
@@ -199,7 +199,7 @@
 }
 
 .feynman__subtitle {
-  margin-top: 70px;
+  margin: 70px 0 0 0;
   text-align: center;
   line-height: 51px;
   font-size: 36px;
@@ -249,6 +249,7 @@
   margin-right: 0;
   margin-top: 80px;
   z-index: 1;
+  padding: 0;
 }
 
 .triangle {
