--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@
   left: 64px;
   bottom: 30px;
   width: 388px;
-  z-index: 2;
+  z-index: 3;
   line-height: 25px;
   font-size: 18px;
   font-weight: 400;
@@ -226,16 +226,17 @@
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
+  z-index: -1;
 }
 
 .section-title_theme_dark {
   color: white;
-  z-index: 1;
+  z-index: 25;
 }
 
 .section-subtitle_theme_dark {
   color: white;
-  z-index: 1;
+  z-index: 2;
 }
 
 .table_theme_dark {
@@ -258,8 +259,9 @@
   height: 877px;
   right: -210px;
   top: 0;
-  z-index: 0;
+  z-index: -1;
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
 }
 
 .footer {
