исправлены ошибки из комментариев

--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -1,6 +1,6 @@
 .cards__description {
   max-width: 240px;
-  padding: 16px 0 60px;
+  padding: 16px 0 0;
   text-align: center;
   margin: 0;
   line-height: 23px;
