--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url("../blocks/techniques/techniques.css");
 @import url("../blocks/video/video.css");
 @import url("../blocks/video/__iframes/video__iframes.css");
+@import url("../blocks/video/__iframe/video__iframe.css");
 @import url("../blocks/oakley/oakley.css");
 @import url("../blocks/section-title/section-title.css");
 @import url("../blocks/section-title/_theme/section-title_theme_dark.css");
